# ai-terminal

./: .gitignore  CHANGELOG.md  CLAUDE.md  ITERATION_LOG.md  README.md  ROADMAP.md  package.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
apple/: README.md
apple/AITerminalCore/: Package.resolved  Package.swift
apple/AITerminalCore/Sources/AITerminalCore/: AIConversation.swift  AIService.swift  BatchRunner.swift  CommandFavorites.swift  CommandHistory.swift  CommandRisk.swift  CommandSnippet.swift  Connection.swift  ConnectionPortability.swift  ConnectionStore.swift  DiagnosticWorkflow.swift  KeychainStore.swift  KnownHosts.swift  OpRollback.swift  PortForward.swift  ReachabilityChecker.swift  (+6 more)
apple/App/: Package.resolved  Package.swift  project.yml
apple/App/AITerminal.xcodeproj/: project.pbxproj
apple/App/ShotsMain/: main.swift
apple/App/Sources/: AITerminalApp.swift  AppModel.swift  TerminalSessionVM.swift
ci/: README.md  github-actions-ci.yml
docs/: MATURITY.md  PARITY.md  PRODUCT.md  connection-format.md
linux/: Cargo.toml  README.md
linux/src/: main.rs
mobile/: README.md  capacitor.config.json  package-lock.json  package.json
mobile/www/: app.js  index.html  styles.css  terminal.html  terminal.js
relay/: README.md  package.json  server.js
src/main/: main.js
src/renderer/: App.jsx  index.html
src/renderer/styles/: app.css
windows/TermindWindows/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  TermindWindows.csproj  app.manifest
(+55 files in other folders)
